--- a/app/views/timetables/student.html.erb
+++ b/app/views/timetables/student.html.erb
@@ -3,7 +3,10 @@
     <h1>学生用時間割</h1>
     <div class="week-switch">
       <%= link_to "＜ 先週", timetables_student_path(week: (@current_week - 7.days)) %>
-      <span class="current-week"><%= @current_week.strftime("%-m月%-d日〜") %><%= (@current_week + 6.days).strftime("%-m月%-d日") %></span>
+      <span class="current-week">
+        <%= @current_week.strftime("%-m月%-d日〜") %>
+        <%= (@current_week + 6.days).strftime("%-m月%-d日") %>
+      </span>
       <%= link_to "翌週 ＞", timetables_student_path(week: (@current_week + 7.days)) %>
     </div>
   </header>
@@ -24,18 +27,46 @@
         <tr>
           <td><%= "#{period}限" %></td>
           <% (1..5).each do |wday| %>
-            <% entry = @entries.find { |e| e.period_id == period && e.wday == wday } %>
-            <td>
-              <% if entry %>
-                <%= entry.subject.subject_name %>
-              <% else %>
-                -
-              <% end %>
-            </td>
+            <% base_entry = @entries.find { |e| e.period_id == period && e.wday == wday } %>
+
+            <% date = @current_week + (wday - 1).days %>
+            <% change = @change_requests.find { |c| c.change_day == date && c.change_koma == period } %>
+
+            <% if base_entry || change %>
+              <% subject_name =
+                   if change&.subject
+                     change.subject.subject_name
+                   else
+                     base_entry&.subject&.subject_name
+                   end %>
+
+              <% type_key =
+                   if change
+                     change.lesson_type
+                   else
+                     base_entry&.lesson_type
+                   end %>
+
+              <% type_class =
+                   case type_key
+                   when "changed_lesson" then "changed"
+                   when "exam"           then "exam"
+                   when "event"          then "event"
+                   when "final_lesson"   then "last"
+                   else "fixed"
+                   end %>
+
+              <td class="cell <%= type_class %>">
+                <%= subject_name %>
+              </td>
+            <% else %>
+              <td>-</td>
+            <% end %>
           <% end %>
         </tr>
       <% end %>
     </tbody>
+
   </table>
 
   <div class="login-link">
